packages/deployer/src/deployment-manager/kubectl-deployer/k8s-feature-deployment/testdata/toyota-feature-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: toyota-deployment-new-branch
  labels:
    ttl-hours: '66'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: toyota-pod-new-branch
        environment: dev
    spec:
      containers:
        - name: toyota-pod-new-branch
          image: isrvkbuild02:5000/toyota-web_shepherd-deployed:42-cc35d84
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 4
            failureThreshold: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 4
          ports:
            - containerPort: 80
              name: httpport
---
apiVersion: v1
kind: Service
metadata:
  name: toyota-new-branch
  labels:
    name: toyota-new-branch
    environment: dev
    ttl-hours: '66'
spec:
  ports:
    - port: 80
      name: serviceport
      targetPort: 80
      protocol: TCP
  selector:
    app: toyota-pod-new-branch
    origin: branch
    environment: dev
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toyota-ingress-new-branch
  labels:
    ttl-hours: '66'
spec:
  rules:
    - host: new-branch-toyota.dev.it.tm.is
      http:
        paths:
          - backend:
              serviceName: toyota-new-branch
              servicePort: 80
